--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "focus-trap-react": "^3.0.3",
     "lodash": "^4.17.4",
     "object-assign": "^4.1.1",
